--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -18,8 +18,8 @@ on:
   pull_request:
     # The branches below must be a subset of the branches above
     branches: [ develop ]
-  schedule:
-    - cron: '31 21 * * 0'
+  # schedule:
+  #   - cron: '31 21 * * 0'
 
 jobs:
   analyze:
