--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,8 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Start Batfish Container
+      run: docker-compose up -d batfish
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip poetry
