--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,18 @@
 ---
 version: "3.8"
 services:
+  batfish:
+    container_name: "batfish"
+    image: "batfish/batfish:test-919"
+    ports:
+      - "9996:9996"
+      - "9997:9997"
   test:
+    container_name: "test"
     build:
       context: "."
       target: "test"
+    links:
+      - "batfish:bf"
+    depends_on:
+      - "batfish"
