--- a/tests/inventory_data/hosts.yml
+++ b/tests/inventory_data/hosts.yml
@@ -1,7 +1,7 @@
 ---
-test-droid:
+nostromo:
     port: "22"
     hostname: "localhost"
-    username: "r2-d2"
+    username: "Ripley"
     password: "some_pass"
     platform: "linux"
